fix(About): adjusts center aligment on mobile

--- a/components/sections/About/About.module.css
+++ b/components/sections/About/About.module.css
@@ -139,6 +139,10 @@
     text-align: center;
   }
 
+  .picture[data-enter] > .greeting {
+    transform: translateX(0);
+  }
+
   .picture > .tilt {
     margin: 0 auto;
   }
